apps/k8sgpt/k8sgpt-cr.yaml
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-default
  namespace: k8sgpt-operator
spec:
  version: v0.4.36
  ai:
    enabled: true
    model: gemini-3.5-flash
    backend: google
    secret:
      name: k8sgpt-secrets
      key: google-api-key
  noCache: false
  targetNamespace: default
  analysis:
    interval: 2m
  filters:
    - Pod
    - Ingress
    - Service
    - Deployment
  sink:
    type: slack
    webhook: secret-managed
    secret:
      name: k8sgpt-secrets
      key: slack-webhook-url
---
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-apps
  namespace: k8sgpt-operator
spec:
  version: v0.4.36
  ai:
    enabled: true
    model: gemini-3.5-flash
    backend: google
    secret:
      name: k8sgpt-secrets
      key: google-api-key
  noCache: false
  targetNamespace: apps
  analysis:
    interval: 2m
  filters:
    - Pod
    - Ingress
    - Service
    - Deployment
  sink:
    type: slack
    webhook: secret-managed
    secret:
      name: k8sgpt-secrets
      key: slack-webhook-url
---
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-monitoring
  namespace: k8sgpt-operator
spec:
  version: v0.4.36
  ai:
    enabled: true
    model: gemini-3.5-flash
    backend: google
    secret:
      name: k8sgpt-secrets
      key: google-api-key
  noCache: false
  targetNamespace: monitoring
  analysis:
    interval: 2m
  filters:
    - Pod
    - Ingress
    - Service
    - Deployment
  sink:
    type: slack
    webhook: secret-managed
    secret:
      name: k8sgpt-secrets
      key: slack-webhook-url
---
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-logging
  namespace: k8sgpt-operator
spec:
  version: v0.4.36
  ai:
    enabled: true
    model: gemini-3.5-flash
    backend: google
    secret:
      name: k8sgpt-secrets
      key: google-api-key
  noCache: false
  targetNamespace: logging
  analysis:
    interval: 2m
  filters:
    - Pod
    - Ingress
    - Service
    - Deployment
  sink:
    type: slack
    webhook: secret-managed
    secret:
      name: k8sgpt-secrets
      key: slack-webhook-url
---
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-sports-store
  namespace: k8sgpt-operator
spec:
  version: v0.4.36
  ai:
    enabled: true
    model: gemini-3.5-flash
    backend: google
    secret:
      name: k8sgpt-secrets
      key: google-api-key
  noCache: false
  targetNamespace: sports-store
  analysis:
    interval: 2m
  filters:
    - Pod
    - Ingress
    - Service
    - Deployment
  sink:
    type: slack
    webhook: secret-managed
    secret:
      name: k8sgpt-secrets
      key: slack-webhook-url
