apps/k8sgpt/k8sgpt-resources.yaml
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt-prod
  namespace: k8sgpt-operator-system
spec:
  ai:
    enabled: true
    model: gemini-1.5-flash
    backend: google
    secret:
      name: k8sgpt-secrets
      key: google-api-key
  noCache: false
  filters:
    namespaces:
      - default
      - sports-store
      - monitoring
      - logging
  sink:
    type: slack
    secret:
      name: k8sgpt-secrets
      key: slack-webhook-url
